--- a/week3.ipynb
+++ b/week3.ipynb
@@ -1,40 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "e6ac6624",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"Hello World\"\n",
-    "b = 20\n",
-    "c = 20.5\n",
-    "d = 1j\n",
-    "e = [\"apple\", \"banana\", \"cherry\"]\n",
-    "f = (\"apple\", \"banana\", \"cherry\")\n",
-    "g = range (6)\n",
-    "h = {\"name\" : \"John\", \"age\" : 36}\n",
-    "i = (\"apple\", \"banana\", \"cherry\")\n",
-    "j = frozenset({\"apple\", \"banana\", \"cherry\"})\n",
-    "k = True\n",
-    "l = b\"Hello\"\n",
-    "m = bytearray(5)\n",
-    "n = memoryview(bytes(5))\n",
-    "o = None\n",
-    "\n",
-    "print(type(f))"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
