--- a/week4/ex1.ipynb
+++ b/week4/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "910db6c3",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ชื่อ tawan รหัสนักศึกษา 674245003 คะเนน 80.0 Grade  A\n",
-      "ชื่อ sojvps]6,fbo รหัสนักศึกษา 674245001 คะเนน 40.0 Grade  E\n",
-      "ชื่อ เอกชัย อ้นคำ รหัสนักศึกษา 674245010 คะเนน 80.0 Grade  A\n"
+      "False\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
