--- a/week6/homewroke.ipynb
+++ b/week6/homewroke.ipynb
@@ -5,19 +5,7 @@
    "execution_count": null,
    "id": "812edcfa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ภาระหน่วยกิจของเเเต่ละวิชา :\n",
-      "com (10 credits, 20 students)\n",
-      "\n",
-      "ภาระหน่วยกิตรวมของแต่ละวิชา: [1500, 2400, 4200, 200]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Course:\n",
     "    def __init__(self, course_name, credits, students):\n",
@@ -60,6 +48,121 @@
     "\n",
     "sorted_burden = sorted(map(lambda c: c.credits * c.students, courses), reverse=True)\n",
     "print(\"\\nเรียงภาระหน่วยกิตจากมากไปน้อย:\", sorted_burden)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bfae1cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import messagebox\n",
+    "\n",
+    "def check_winner(board, player):\n",
+    "    win_states = [\n",
+    "        [board[0], board[1], board[2]],\n",
+    "        [board[3], board[4], board[5]],\n",
+    "        [board[6], board[7], board[8]],\n",
+    "        [board[0], board[3], board[6]],\n",
+    "        [board[1], board[4], board[7]],\n",
+    "        [board[2], board[5], board[8]],\n",
+    "        [board[0], board[4], board[8]],\n",
+    "        [board[2], board[4], board[6]],\n",
+    "    ]\n",
+    "    return [player, player, player] in win_states\n",
+    "\n",
+    "def is_draw(board):\n",
+    "    return all(cell != \"\" for cell in board)\n",
+    "\n",
+    "def minimax(board, depth, is_maximizing):\n",
+    "    if check_winner(board, \"O\"):\n",
+    "        return 1\n",
+    "    if check_winner(board, \"X\"):\n",
+    "        return -1\n",
+    "    if is_draw(board):\n",
+    "        return 0\n",
+    "\n",
+    "    if is_maximizing:\n",
+    "        best_score = -float('inf')\n",
+    "        for i in range(9):\n",
+    "            if board[i] == \"\":\n",
+    "                board[i] = \"O\"\n",
+    "                score = minimax(board, depth + 1, False)\n",
+    "                board[i] = \"\"\n",
+    "                best_score = max(score, best_score)\n",
+    "        return best_score\n",
+    "    else:\n",
+    "        best_score = float('inf')\n",
+    "        for i in range(9):\n",
+    "            if board[i] == \"\":\n",
+    "                board[i] = \"X\"\n",
+    "                score = minimax(board, depth + 1, True)\n",
+    "                board[i] = \"\"\n",
+    "                best_score = min(score, best_score)\n",
+    "        return best_score\n",
+    "\n",
+    "def best_move():\n",
+    "    best_score = -float('inf')\n",
+    "    move = None\n",
+    "    for i in range(9):\n",
+    "        if board[i] == \"\":\n",
+    "            board[i] = \"O\"\n",
+    "            score = minimax(board, 0, False)\n",
+    "            board[i] = \"\"\n",
+    "            if score > best_score:\n",
+    "                best_score = score\n",
+    "                move = i\n",
+    "    return move\n",
+    "\n",
+    "def on_click(i):\n",
+    "    if board[i] == \"\" and not game_over[0]:\n",
+    "        board[i] = \"X\"\n",
+    "        buttons[i].config(text=\"X\", state=\"disabled\")\n",
+    "        if check_winner(board, \"X\"):\n",
+    "            messagebox.showinfo(\"Game Over\", \"คุณชนะ!\")\n",
+    "            game_over[0] = True\n",
+    "            return\n",
+    "        elif is_draw(board):\n",
+    "            messagebox.showinfo(\"Game Over\", \"เสมอ!\")\n",
+    "            game_over[0] = True\n",
+    "            return\n",
+    "\n",
+    "        bot_move = best_move()\n",
+    "        if bot_move is not None:\n",
+    "            board[bot_move] = \"O\"\n",
+    "            buttons[bot_move].config(text=\"O\", state=\"disabled\")\n",
+    "            if check_winner(board, \"O\"):\n",
+    "                messagebox.showinfo(\"Game Over\", \"บอทชนะ!\")\n",
+    "                game_over[0] = True\n",
+    "            elif is_draw(board):\n",
+    "                messagebox.showinfo(\"Game Over\", \"เสมอ!\")\n",
+    "                game_over[0] = True\n",
+    "\n",
+    "def reset_game():\n",
+    "    for i in range(9):\n",
+    "        board[i] = \"\"\n",
+    "        buttons[i].config(text=\"\", state=\"normal\")\n",
+    "    game_over[0] = False\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "root.title(\"เกม XO แข่งกับบอท (ยากที่สุด)\")\n",
+    "\n",
+    "board = [\"\" for _ in range(9)]\n",
+    "buttons = []\n",
+    "game_over = [False]\n",
+    "\n",
+    "for i in range(9):\n",
+    "    btn = tk.Button(root, text=\"\", font=(\"Arial\", 32), width=3, height=1,\n",
+    "                    command=lambda i=i: on_click(i))\n",
+    "    btn.grid(row=i//3, column=i%3)\n",
+    "    buttons.append(btn)\n",
+    "\n",
+    "reset_btn = tk.Button(root, text=\"เริ่มใหม่\", command=reset_game)\n",
+    "reset_btn.grid(row=3, column=0, columnspan=3, sticky=\"nsew\")\n",
+    "\n",
+    "root.mainloop()"
    ]
   }
  ],
